--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
-name = "carg0-free"
-version = "0.0.0"
-license = "MIT OR Apache-2.0"
+name = "cargo-free"
 authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
+description = "A cargo subcommand to check if a given crate name is available."
+license = "MIT OR Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/SirWindfield/cargo-free"
+version = "0.0.0"
 edition = "2018"
