--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,12 @@ readme = "README.md"
 repository = "https://github.com/SirWindfield/cargo-free"
 version = "0.0.0"
 edition = "2018"
+
+[dependencies]
+colored = { version = "2.0.0", optional = true }
+indoc = "1.0.2"
+pico-args = { version = "0.3.3", default-features = false }
+ureq = "1.3.0"
+
+[features]
+color = ["colored"]
