--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2018"
 colored = { version = "2.0.0", optional = true }
 indoc = "1.0.2"
 pico-args = { version = "0.3.3", default-features = false }
-ureq = "1.3.0"
+ureq = { version = "1.3.0", default-features = false, features = ["tls"] }
 
 [features]
 color = ["colored"]
