--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ pico-args = { version = "0.3.3", default-features = false }
 ureq = { version = "1.3.0", default-features = false, features = ["tls"] }
 
 [features]
+default = ["colors"]
 colors = ["colored"]
