--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,12 @@ version = "0.2.0"
 edition = "2018"
 
 [dependencies]
+ansi-colors-macro = "0.1.2"
 colored = { version = "2.0.0", optional = true }
 indoc = "1.0.3"
 pico-args = { version = "0.3.4", default-features = false }
+terminal-log-symbols = "0.1.3"
+terminal-spinners = "0.1.1"
 thiserror = "1.0.24"
 ureq = { version = "1.5.4", default-features = false, features = ["tls"] }
 
