--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "cargo-free"
 authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
 description = "A cargo subcommand to check if a given crate name is available."
+categories = ["command-line-utilities", "development-tools::cargo-plugins"]
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/SirWindfield/cargo-free"
