--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,13 @@ version = "0.5.1"
 edition = "2018"
 
 [dependencies]
-colored = { version = "2.0.0", optional = true }
-indoc = "1.0.3"
-pico-args = { version = "0.3.4", default-features = false }
+clap = "3.0.0-beta.2"
+serde_json = { version = "1.0.64", optional = true }
 terminal-log-symbols = "0.1.6"
 terminal-spinners = "0.3.1"
 thiserror = "1.0.24"
 ureq = { version = "1.5.4", default-features = false, features = ["tls"] }
 
 [features]
-default = ["colors"]
-colors = ["colored"]
+default = ["json"]
+json = ["serde_json"]
